# promptly-vault

./: .editorconfig  LICENSE
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  exceptions.py  security.py
backend/app/dependencies/: __init__.py  auth_deps.py  database_deps.py
backend/app/helpers/: comment_parser.py  prompt_parser.py
backend/app/models/: user.py
backend/app/repositories/: comments_repository.py  prompts_repository.py  repositories_manager.py  user_repository.py
backend/app/routes/: auth_routes.py  prompt_routes.py  user_routes.py
backend/app/schemas/: __init__.py  comment_schema.py  prompt_schema.py  user_schema.py
backend/app/service/: users_service.py
backend/app/services/: auth_service.py  comments_service.py  prompts_service.py  services_manager.py  user_service.py
backend/helpers/: prompt_parser.py
backend/tests/: conftest.py  test_user_repository.py  test_user_service.py
backend/tests/e2e/: test_auth_endpoints.py  test_prompts_endpoints.py  test_user_endpoints.py
backend/tests/integration/: test_comments_repository_integration.py  test_comments_service_integration.py  test_pormpts_service_integration.py  test_prompt_repository_integration.py  test_prompts_repository_integration.py  test_prompts_service_integration.py  test_user_repository_integration.py  test_user_service_integration.py
backend/tests/mocks/: test_prompts_mock.json
backend/tests/unit/: test_auth_service.py  test_prompts_service.py  test_user_repository.py  test_user_service.py
(+150 files in other folders)
