[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "passlib[bcrypt]==1.7.4",
    "pyjwt[crypto]==2.10.1",
    "pymongo==4.14.1",
    "pydantic-settings==2.10.1",
    "bcrypt<4.0",
]
